--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 1. Implement loading the config from photo_collage.ini
-2. ImageMagick sometimes incorrectly interprets the image orientation and the tiles in the collage are rotated (probably related to EXIF?)
+  1.1. Load the settings from the section [tile]
+  1.2. Load the settings from the section [collage]
+2. [✓] ImageMagick sometimes incorrectly interprets the image orientation and the tiles in the collage are rotated (probably related to EXIF?)
